[gd_scene load_steps=3 format=3 uid="uid://dl2edw32vnxff"]

[ext_resource type="Texture2D" uid="uid://dyv3fwclxfhp7" path="res://assets/monsters/base_character_sprite.png" id="1_4b3c2"]
[ext_resource type="Script" path="res://scripts/Container.gd" id="2_a6mo6"]

[node name="Container" type="TextureRect" groups=["monster_container"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_4b3c2")
stretch_mode = 5
script = ExtResource("2_a6mo6")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
